--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     />
   </head>
 
-  <body class="bg-secondary">
+  <body>
     <!-- Nav bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand ml-3 bg-success text-white font-weight-bold" href="./index.html">Jim Wheeler</a
