--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
       >
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div
+      <nav
         class="collapse navbar-collapse w-100 order-3 dual-collapse2"
         id="navbarSupportedContent"
       >
@@ -56,7 +56,7 @@
             >
           </li>
         </ul>
-      </div>
+      </nav>
     </nav>
     <!--div container with background-->
     <!--Card-->
