Added card body to Portfolio page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
   <body>
     <!-- Nav bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand ml-3 bg-success text-white font-weight-bold" href="./index.html">Jim Wheeler</a
+      <a
+        class="navbar-brand ml-3 bg-success text-white font-weight-bold"
+        href="./index.html"
+        >Jim Wheeler</a
       ><button
         class="navbar-toggler"
         type="button"
@@ -54,21 +57,39 @@
     </nav>
     <!--Card-->
     <article class="row m-3">
-      <article class="col-sm-9">
+      <article class="col-9">
         <article class="card">
-          <header class="card-header text-success font-weight-bold">About Me</header>
-          <section class="row mt-3 ml-1">
-            <section class="col-sm-3">
-          <figure class="img-thumbnail card-body bg-light"></figure>
-            <img class="float-left mr-2 mb-1">
+          <header class="card-header text-success font-weight-bold">
+            About Me
+          </header>
+          <section class="row mt-3 ml-1 mr-1 mb-3">    
+            <section class="col-9">
+              <img class="card-img float-left mr-2 mb-1" src=".../100px160/" alt="Card image cap">
+              <p class="card-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+                tincidunt sem quis tortor pharetra, pulvinar tempus diam
+                malesuada. Suspendisse potenti. Sed a mi id turpis rhoncus
+                tempor et ac erat. Aenean non euismod ex.
+              </p>
+            </section>
           </section>
-          <section class="col-sm-6">
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <section class="row mt-3 ml-1 mr-1 mb-3">
+              <section class="col-9">
+                <p class="card-text">
+                  Integer non ultrices ligula. Morbi est nibh, scelerisque et
+                  massa a, consequat porttitor magna. Cras sollicitudin, augue
+                  quis varius cursus, lacus eros vehicula nulla, at mollis leo
+                  ipsum et turpis. In a varius orci, ut hendrerit lorem. Aliquam
+                  id vestibulum purus, eu cursus felis. Phasellus in nunc
+                  aliquam, faucibus turpis eu, tempor enim. Donec fermentum leo
+                  eget gravida ultrices.
+                </p>
+              </section>
+            </section>
           </section>
-          </section>
-          </article>
         </article>
       </article>
+    </article>
     <!--Footer-->
     <footer
       class="text-center fixed-bottom bg-secondary text-white border-top border-info"
