--- a/portfolio.html
+++ b/portfolio.html
@@ -14,18 +14,15 @@
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
       crossorigin="anonymous"
     />
-    <style>
-      
-      .border-top {
-          border-width:6px !important;
-      }
-    </style>
   </head>
 
   <body>
-     <!-- Nav bar -->
+    <!-- Nav bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand ml-3 bg-success text-white font-weight-bold" href="./index.html">Jim Wheeler</a
+      <a
+        class="navbar-brand ml-3 bg-success text-white font-weight-bold"
+        href="./index.html"
+        >Jim Wheeler</a
       ><button
         class="navbar-toggler"
         type="button"
@@ -58,10 +55,40 @@
         </ul>
       </nav>
     </nav>
-    <!--div container with background-->
-    <!--Card-->
-    <!-- Image and text -->
-    <!--Footer-->
+    <article class="row m-3">
+      <article class="col-9">
+        <article class="card">
+          <header class="card-header text-success font-weight-bold">
+            Portfolio
+          </header>
+
+          <section class="row mt-3 ml-3">
+            <figure class="col-sm">
+              <img src="" alt="bar" width="350" height="350" />
+            </figure>
+            <figure class="col-sm">
+              <img src="" alt="bar" width="350" height="350" />
+            </figure>
+          </section>
+
+          <section class="row ml-3">
+            <figure class="col-sm">
+              <img src="" alt="bar" width="350" height="350" />
+            </figure>
+            <figure class="col-sm">
+              <img src="" alt="bar" width="350" height="350" />
+            </figure>
+          </section>
+
+          <section class="row mb-3 ml-3">
+            <figure class="col-sm">
+              <img src="" alt="bar" width="350" height="350" />
+            </figure>
+            <figure class="col-sm"></figure>
+          </section>
+        </article>
+      </article>
+    </article>
     <footer
       class="text-center fixed-bottom bg-secondary text-white border-top border-info"
     >
