--- a/contact.html
+++ b/contact.html
@@ -14,18 +14,15 @@
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
       crossorigin="anonymous"
     />
-    <style>
-      
-      .border-top {
-          border-width:6px !important;
-      }
-    </style>
   </head>
 
   <body>
     <!-- Nav bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand ml-3 bg-success text-white font-weight-bold" href="./index.html">Jim Wheeler</a
+      <a
+        class="navbar-brand ml-3 bg-success text-white font-weight-bold"
+        href="./index.html"
+        >Jim Wheeler</a
       ><button
         class="navbar-toggler"
         type="button"
