Added card body to Contact

--- a/contact.html
+++ b/contact.html
@@ -55,10 +55,16 @@
         </ul>
       </nav>
     </nav>
-    <!--div container with background-->
-    <!--Card-->
-    <!-- Image and text -->
-    <!--Footer-->
+    <article class="row m-3">
+      <article class="col-9">
+        <article class="card">
+          <header class="card-header text-success font-weight-bold">
+            Contact
+          </header>
+
+        </article>
+      </article>
+    </article>
     <footer
       class="text-center fixed-bottom bg-secondary text-white border-top border-info"
     >
