Revise form layout

--- a/contact.html
+++ b/contact.html
@@ -77,12 +77,11 @@
               >
             </div>
             <div class="form-group">
-              <label for="exampleInputPassword1">Password</label>
+              <label for="exampleInputPassword1">Name</label>
               <input
-                type="password"
                 class="form-control"
                 id="exampleInputPassword1"
-                placeholder="Password"
+                placeholder="Name"
               />
             </div>
             <div class="form-group">
