--- a/portfolio.html
+++ b/portfolio.html
@@ -7,13 +7,13 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <title>Index</title>
-    <link rel="stylesheet" href="./assets/css/style.css" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
 
   <body>
@@ -55,40 +55,55 @@
         </ul>
       </nav>
     </nav>
-    <article class="row m-3">
-      <article class="col-9">
-        <article class="card">
-          <header class="card-header text-success font-weight-bold">
-            Portfolio
-          </header>
+    <!-- Card -->
+    <main class="container">
+      <section class="row">
+        <article class="col-9 card my-3 mb-5">
+          <h1 class="card-header text-success font-weight-bold">Portfolio</h1>
 
-          <section class="row mt-3 ml-3">
-            <figure class="col-sm">
-              <img src="" alt="bar" width="350" height="350" />
-            </figure>
-            <figure class="col-sm">
-              <img src="" alt="bar" width="350" height="350" />
-            </figure>
-          </section>
+          <section class="row mt-3 ml-3 py-3">
+            <div class="col-6 my-2">
+              <img
+                src="https://via.placeholder.com/150"
+                alt="bar"
+                class="portfolio-img"
+              />
+            </div>
+            <div class="col-6 my-2">
+              <img
+                src="https://via.placeholder.com/150"
+                alt="bar"
+                class="portfolio-img"
+              />
+            </div>
+            <div class="col-6 my-2">
+              <img
+                src="https://via.placeholder.com/150"
+                alt="bar"
+                class="portfolio-img"
+              />
+            </div>
+          </div>
+          <div class="col-6 my-2">
+            <img
+              src="https://via.placeholder.com/150"
+              alt="bar"
+              class="portfolio-img"
+            />
+          </div>
+          <div class="col-6 my-2">
+            <img
+              src="https://via.placeholder.com/150"
+              alt="bar"
+              class="portfolio-img"
+            />
+          </div>
 
-          <section class="row ml-3">
-            <figure class="col-sm">
-              <img src="" alt="bar" width="350" height="350" />
-            </figure>
-            <figure class="col-sm">
-              <img src="" alt="bar" width="350" height="350" />
-            </figure>
-          </section>
-
-          <section class="row mb-3 ml-3">
-            <figure class="col-sm">
-              <img src="" alt="bar" width="350" height="350" />
-            </figure>
-            <figure class="col-sm"></figure>
+           
           </section>
         </article>
-      </article>
-    </article>
+      </section>
+    </main>
     <footer
       class="text-center fixed-bottom bg-secondary text-white border-top border-info"
     >
