--- a/contact.html
+++ b/contact.html
@@ -7,13 +7,14 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <title>Index</title>
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
 
   <body>
@@ -55,12 +56,11 @@
         </ul>
       </nav>
     </nav>
-    <article class="row m-3">
-      <article class="col-9">
-        <article class="card">
-          <header class="card-header text-success font-weight-bold">
-            Contact
-          </header>
+    <!-- Card -->
+    <main class="container">
+      <section class="row">
+        <article class="col-9 card mt-3 mb-5">
+          <h1 class="card-header text-success font-weight-bold">Contact</h1>
 
           <form class="col-7 m-3">
             <div class="form-group">
@@ -96,8 +96,8 @@
           </form>
           <form class="col-2 m-3"></form>
         </article>
-      </article>
-    </article>
+      </section>
+    </main>
     <footer
       class="text-center fixed-bottom bg-secondary text-white border-top border-info"
     >
