--- a/portfolio.html
+++ b/portfolio.html
@@ -62,21 +62,21 @@
           <h1 class="card-header text-success font-weight-bold">Portfolio</h1>
 
           <section class="row mt-3 ml-3 py-3">
-            <div class="col-6 my-2">
+            <div class="col-sm-6 my-2">
               <img
                 src="https://via.placeholder.com/150"
                 alt="bar"
                 class="portfolio-img"
               />
             </div>
-            <div class="col-6 my-2">
+            <div class="col-sm-6 my-2">
               <img
                 src="https://via.placeholder.com/150"
                 alt="bar"
                 class="portfolio-img"
               />
             </div>
-            <div class="col-6 my-2">
+            <div class="col-sm-6 my-2">
               <img
                 src="https://via.placeholder.com/150"
                 alt="bar"
@@ -84,14 +84,14 @@
               />
             </div>
           </div>
-          <div class="col-6 my-2">
+          <div class="col-sm-6 my-2">
             <img
               src="https://via.placeholder.com/150"
               alt="bar"
               class="portfolio-img"
             />
           </div>
-          <div class="col-6 my-2">
+          <div class="col-sm-6 my-2">
             <img
               src="https://via.placeholder.com/150"
               alt="bar"
