Revised card positioning to center

--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
     <!--Card-->
     <main class="container">
       <section class="row">
-        <article class="col-9 card mt-3 mb-5">
+        <article class="card justify-content-center my-5">
           <h1 class="card-header text-success font-weight-bold">About Me</h1>
 
           <section class="my-3 mx-1">
             <img
               id="portrait"
               class="float-left mr-2 mb-2"
-              src="./assets/img/ms_portrait.jpg"
+              src="./assets/img/mn_portrait.jpg"
               alt="Card image cap"
             />
             <p>
@@ -86,10 +86,11 @@
         </article>
       </section>
     </main>
-    <!--Footer-->
+    <!--Footer with centered text, fixed bottom, secondary background, white text-->
     <footer
       class="text-center fixed-bottom bg-secondary text-white border-top border-info"
     >
+      <!--& copy gives the footer copy the copyright symbol-->
       <p>&copy; 2020</p>
     </footer>
     <!-- JS, Popper.js, and jQuery -->
