--- a/portfolio.html
+++ b/portfolio.html
@@ -58,27 +58,27 @@
     <!-- Card -->
     <main class="container">
       <section class="row">
-        <article class="col-9 card my-3 mb-5">
+        <article class="col-12 card my-3 mb-5">
           <h1 class="card-header text-success font-weight-bold">Portfolio</h1>
 
-          <section class="row mt-3 ml-3 py-3">
+          <section class="row">
             <div class="col-sm-6 my-2">
               <img
-                src="https://via.placeholder.com/150"
+                src="https://via.placeholder.com/350"
                 alt="bar"
                 class="portfolio-img"
               />
             </div>
             <div class="col-sm-6 my-2">
               <img
-                src="https://via.placeholder.com/150"
+                src="https://via.placeholder.com/350"
                 alt="bar"
                 class="portfolio-img"
               />
             </div>
             <div class="col-sm-6 my-2">
               <img
-                src="https://via.placeholder.com/150"
+                src="https://via.placeholder.com/350"
                 alt="bar"
                 class="portfolio-img"
               />
@@ -86,14 +86,14 @@
           </div>
           <div class="col-sm-6 my-2">
             <img
-              src="https://via.placeholder.com/150"
+              src="https://via.placeholder.com/350"
               alt="bar"
               class="portfolio-img"
             />
           </div>
           <div class="col-sm-6 my-2">
             <img
-              src="https://via.placeholder.com/150"
+              src="https://via.placeholder.com/350"
               alt="bar"
               class="portfolio-img"
             />
@@ -104,9 +104,11 @@
         </article>
       </section>
     </main>
+    <!--Footer with centered text, fixed bottom, secondary background, white text-->
     <footer
       class="text-center fixed-bottom bg-secondary text-white border-top border-info"
     >
+      <!--& copy gives the footer copy the copyright symbol-->
       <p>&copy; 2020</p>
     </footer>
     <!-- JS, Popper.js, and jQuery -->
