--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <title>Index</title>
-    
+
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -59,7 +59,7 @@
     <!-- Card -->
     <main class="container">
       <section class="row">
-        <article class="col-9 card mt-3 mb-5">
+        <article class="col-12 card my-3 mb-5">
           <h1 class="card-header text-success font-weight-bold">Contact</h1>
 
           <form class="col-7 m-3">
