Changed h1, Nav-Bar background color from sucess(green) to info(teal)

--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
     <!-- Nav bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a
-        class="navbar-brand ml-3 bg-success text-white font-weight-bold"
+        class="navbar-brand ml-3 bg-info text-white font-weight-bold"
         href="./index.html"
         >Jim Wheeler</a
       ><button
@@ -60,7 +60,7 @@
     <main class="container">
       <section class="row">
         <article class="col-12 card my-3 mb-5">
-          <h1 class="card-header text-success font-weight-bold">Contact</h1>
+          <h1 class="card-header text-info font-weight-bold">Contact</h1>
 
           <form class="col-7 m-3">
             <div class="form-group">
