--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Nav bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a
-        class="navbar-brand ml-3 bg-success text-white font-weight-bold"
+        class="navbar-brand ml-3 bg-info text-white font-weight-bold"
         href="./index.html"
         >Jim Wheeler</a
       ><button
@@ -38,7 +38,9 @@
         class="collapse navbar-collapse w-100 order-3 dual-collapse2"
         id="navbarSupportedContent"
       >
+      <!--The navbar links are an unordered list, right justified-ml-auto-->
         <ul class="navbar-nav ml-auto">
+          <!--The first list item is 'active' so it is darker than the other list items becaue it is the active page.-->
           <li class="nav-item active bg-gradient-primary">
             <a class="nav-link" href="./index.html">About |</a>
           </li>
@@ -56,12 +58,17 @@
       </nav>
     </nav>
     <!--Card-->
+    <!--Card container-->
     <main class="container">
+      <!--Card row-->
       <section class="row">
-        <article class="card justify-content-center my-5">
-          <h1 class="card-header text-success font-weight-bold">About Me</h1>
-
-          <section class="my-3 mx-1">
+        <!--Card column content is centerered and margin for y-axis is 5. Column is full 12 rows on small screens and larger-->
+        <article class="card col-sm-12 my-5">
+          <!--Card header has info(teal) colored text and bold font-->
+          <h1 class="card-header text-info font-weight-bold">About Me</h1>
+          <!--Margin for the y axis of the section is 3, 2 for the x axis.-->
+          <section class="my-3 mx-2">
+            <!--The image has css styling in the style.css file-->
             <img
               id="portrait"
               class="float-left mr-2 mb-2"
