--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
     <!-- Nav bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a
-        class="navbar-brand ml-3 bg-success text-white font-weight-bold"
+        class="navbar-brand ml-3 bg-info text-white font-weight-bold"
         href="./index.html"
         >Jim Wheeler</a
       ><button
@@ -59,7 +59,7 @@
     <main class="container">
       <section class="row">
         <article class="col-12 card my-3 mb-5">
-          <h1 class="card-header text-success font-weight-bold">Portfolio</h1>
+          <h1 class="card-header text-info font-weight-bold">Portfolio</h1>
 
           <section class="row">
             <div class="col-sm-6 my-2">
