Changed column and row layout for portfolio to center text and added comments

--- a/portfolio.html
+++ b/portfolio.html
@@ -55,52 +55,61 @@
         </ul>
       </nav>
     </nav>
-    <!-- Card -->
+    <!-- Portfolio container -->
     <main class="container">
+      <!-- Portfolio card row -->
       <section class="row">
+        <!-- Portfolio card column takes up all 12 columns with y axis 3 margin and bottom margin 5 -->
         <article class="col-12 card my-3 mb-5">
+          <!-- Portfolio card header text-info(teal) color and bold font -->
           <h1 class="card-header text-info font-weight-bold">Portfolio</h1>
-
-          <section class="row">
-            <div class="col-sm-6 my-2">
+          <!-- Row for first row of images -->
+          <article class="row">
+            <!-- Column is 12 column wide for mall screens, 6 columns wide for md+, image is centered, 2 margin on y axis -->
+            <div class="col-sm-12 col-md-6 text-center my-2">
               <img
                 src="https://via.placeholder.com/350"
                 alt="bar"
                 class="portfolio-img"
               />
             </div>
-            <div class="col-sm-6 my-2">
+            <!-- Column is 12 column wide for mall screens, 6 columns wide for md+, image is centered, 2 margin on y axis -->
+            <div class="col-sm-12 col-md-6 text-center my-2">
               <img
                 src="https://via.placeholder.com/350"
                 alt="bar"
                 class="portfolio-img"
               />
             </div>
-            <div class="col-sm-6 my-2">
+          </article>
+          <article class="row">
+            <!-- Column is 12 column wide for mall screens, 6 columns wide for md+, image is centered, 2 margin on y axis -->
+            <div class="col-sm-12 col-md-6 text-center my-2">
               <img
                 src="https://via.placeholder.com/350"
                 alt="bar"
                 class="portfolio-img"
               />
             </div>
-          </div>
-          <div class="col-sm-6 my-2">
-            <img
-              src="https://via.placeholder.com/350"
-              alt="bar"
-              class="portfolio-img"
-            />
-          </div>
-          <div class="col-sm-6 my-2">
-            <img
-              src="https://via.placeholder.com/350"
-              alt="bar"
-              class="portfolio-img"
-            />
-          </div>
-
-           
-          </section>
+            <!-- Column is 12 column wide for mall screens, 6 columns wide for md+, image is centered, 2 margin on y axis -->
+            <div class="col-sm-12 col-md-6 text-center my-2">
+              <img
+                src="https://via.placeholder.com/350"
+                alt="bar"
+                class="portfolio-img"
+              />
+            </div>
+          </article>
+          <article class="row">
+            <!-- Column is 12 column wide for mall screens, 6 columns wide for md+, image is centered, 2 margin on y axis -->
+            <div class="col-sm-12 col-md-6 text-center my-2">
+              <img
+                src="https://via.placeholder.com/350"
+                alt="bar"
+                class="portfolio-img"
+              />
+            </div>
+          </article>
         </article>
       </section>
     </main>
