Added margin to container for portfolio.html and contact.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
       </nav>
     </nav>
     <!-- Portfolio container -->
-    <main class="container">
+    <main class="container mt-2 mb-4">
       <!-- Portfolio card row -->
       <section class="row">
         <!-- Portfolio card column takes up all 12 columns with y axis 3 margin and bottom margin 5 -->
