--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
       </nav>
     </nav>
     <!-- Card -->
-    <main class="container">
+    <main class="container mt-2 mb-4">
       <section class="row">
         <article class="col-12 card my-3 mb-5">
           <h1 class="card-header text-info font-weight-bold">Contact</h1>
