--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,8 @@
   <title>Index</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
   <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 
@@ -41,7 +43,7 @@
 
           <div class="card col-sm" style="width: 18rem;">
             <div class="card-body">
-              <h5 class="card-title" id="box">Pour Decsion
+              <h5 class="card-title" id="box">Pour Decision
               </h5>
               <hr class="my-4">
               <a href="https://github.com/jrtwheeler/Pour-Decision" target="_blank" class="btn btn-primary">Repo</a>
