--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,8 @@
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
 
@@ -98,11 +100,13 @@
         </article>
       </section>
     </main>
-    <footer
-      class="text-center fixed-bottom bg-secondary text-white border-top border-info"
-    >
-      <p>&copy; 2020</p>
-    </footer>
+    <!--Footer with centered text, fixed bottom, secondary background, white text-->
+    <div class="card-footer text-muted text-center">
+      <p>
+        Made with <i class="fas fa-heart"></i> and <i class="fas fa-coffee"></i> in Baltimore.
+      </p>
+      </footer>
+    </div>
     <!-- JS, Popper.js, and jQuery -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
